--- a/IT2media.Extensions.Object/packages.config
+++ b/IT2media.Extensions.Object/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="NuGet.Build.Packaging" version="0.1.157-dev" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
+  <package id="NuGet.Build.Packaging" version="0.1.193" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
 </packages>
