--- a/IT2media.Extensions.Object/packages.config
+++ b/IT2media.Extensions.Object/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="NuGet.Build.Packaging" version="0.1.193" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
