--- a/IT2media.Extensions.Object.NUnit/IT2media.Extensions.Object.NUnit.csproj
+++ b/IT2media.Extensions.Object.NUnit/IT2media.Extensions.Object.NUnit.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -50,6 +50,9 @@
       <Project>{EC8A379D-24E4-467F-BA62-2318C69A9C85}</Project>
       <Name>IT2media.Extensions.Object</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
