--- a/IT2media.Extensions.Object.Test/IT2media.Extensions.Object.Test.csproj
+++ b/IT2media.Extensions.Object.Test/IT2media.Extensions.Object.Test.csproj
@@ -33,18 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="IT2media.Extensions.Object, Version=2.0.0.0, Culture=neutral, PublicKeyToken=408933ce12a743a0, processorArchitecture=MSIL">
-      <HintPath>..\packages\IT2media.Extensions.Object.2.0.0\lib\netstandard2.0\IT2media.Extensions.Object.dll</HintPath>
+    <Reference Include="IT2media.Extensions.Object, Version=2.0.1.0, Culture=neutral, PublicKeyToken=408933ce12a743a0, processorArchitecture=MSIL">
+      <HintPath>..\packages\IT2media.Extensions.Object.2.0.1\lib\net46\IT2media.Extensions.Object.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="PCLStorage, Version=1.0.2.0, Culture=neutral, PublicKeyToken=286fe515a2c35b64, processorArchitecture=MSIL">
-      <HintPath>..\packages\PCLStorage.1.0.2\lib\net45\PCLStorage.dll</HintPath>
-    </Reference>
-    <Reference Include="PCLStorage.Abstractions, Version=1.0.2.0, Culture=neutral, PublicKeyToken=286fe515a2c35b64, processorArchitecture=MSIL">
-      <HintPath>..\packages\PCLStorage.1.0.2\lib\net45\PCLStorage.Abstractions.dll</HintPath>
-    </Reference>
+    <Reference Include="PCLStorage.Abstractions, Version=1.0.2.0, Culture=neutral, PublicKeyToken=286fe515a2c35b64" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
