--- a/IT2media.Extensions.Object.Test/packages.config
+++ b/IT2media.Extensions.Object.Test/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="IT2media.Extensions.Object" version="2.0.0" targetFramework="net461" />
+  <package id="IT2media.Extensions.Object" version="2.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
-  <package id="PCLStorage" version="1.0.2" targetFramework="net461" />
+  <package id="PCLStorage.Abstractions" version="1.0.2" targetFramework="net461" />
   <package id="xunit" version="2.3.1" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
   <package id="xunit.analyzers" version="0.7.0" targetFramework="net461" />
