--- a/IT2media.Extensions.Object/IT2media.Extensions.Object.csproj
+++ b/IT2media.Extensions.Object/IT2media.Extensions.Object.csproj
@@ -7,23 +7,32 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>Markus Malz</Authors>
     <Company>IT2media GmbH &amp; Co. KG</Company>
-    <Description>Dump method for all objects. Like LINQPad the method dumps an object in its hierarchical structure, here as intended JSON to Debug.WriteLine.
+    <Description>
+      Dump method for all objects. Like LINQPad the method dumps an object in its hierarchical structure, here as intended JSON to Debug.WriteLine.
 
-DumpToFile and DumpToFileAsync are writing (in windows 10 at least) to %USERPROFILE%\AppData\Local
-into a subfolder of your company/programname or programname/programname</Description>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <FileVersion>2.0.0.0</FileVersion>
-    <Version>2.0.0</Version>
+      DumpToFile and DumpToFileAsync are writing (in windows 10 at least) to %USERPROFILE%\AppData\Local
+      into a subfolder of your company/programname or programname/programname
+    </Description>
+    <AssemblyVersion>2.0.1.0</AssemblyVersion>
+    <FileVersion>2.0.1.0</FileVersion>
+    <Version>2.0.1</Version>
     <PackageIconUrl>https://raw.githubusercontent.com/it2media/Home/master/Logo_IT2media_2015_64x64.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/it2media/Object</PackageProjectUrl>
     <Owners>malzma</Owners>
     <PackageReleaseNotes>
-</PackageReleaseNotes>
+    </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
     <PackageReference Include="PCLStorage" Version="1.0.2" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="PCLStorage.Abstractions" Version="1.0.3" />
   </ItemGroup>
 
 </Project>
